Integrate user controller
