# Routes/userRoutes.js
@@ -1,21 +1,21 @@
 var express= require("express");
 
-var routes=function(Book, data){
-    var bookRouter=express.Router();
-    bookRouter.route('/')
-        .post(function (req, res) {
-            var book = new Book(req.body);
-            book.save();
-            data.data=book;
-            res.send(data);
+var routes=function(User, passport, data){
+    var userRotuer=express.Router();
+
+    userRotuer.route('/')
+        .post(passport.authenticate('local-signup'), function (req, res) {
+           // passport.authenticate(req.body);
+
+            res.send(req.body);
         })
         .get(function(req, res) {
 
-            Book.find(function (err, books) {
+            User.find(function (err, user) {
                 if (err)
                     res.status(500).send(err);
                 else{
-                    data.data=books;
+                    data.data=user;
                     res.json(data)
                 }
 
@@ -25,24 +25,31 @@ var routes=function(Book, data){
 
 
     /***************************Path Param************************************/
-    bookRouter.use('/:bookId', function(req,res, next){
-        Book.findById(req.params.bookId, function (err, book) {
+    userRotuer.use('/logins', function(req,res, next){
+
+       // db.users.find({"local.email":"ratanakpek@gmail.com"})
+        User.find({"local.email":""+req.query.email+""}, function (err, user) {
             if (err)
                 res.status(500).send(err);
-            else if(book){
-                req.book=book;
+            else if(user){
+                req.user=user;
                 next();
             }else{
-                res.status(404).send("No book found");
+                res.status(404).send("Email user nout found");
             }
         });
     });
-    bookRouter.route('/:bookId')
+    userRotuer.route('/logins')
         .get(function(req, res) {
-            data.data=req.book;
-            res.json(data);
+            var data = {
+                code : 200,
+                msg : "Successfully!",
+                data : req.user
+            }
+
+            res.send(data);
         })
-        .put(function(req, res){
+       /* .put(function(req, res){
                     req.book.title=req.body.title;
                     req.book.author=req.body.author;
                     req.book.genre=req.body.genre;
@@ -50,11 +57,8 @@ var routes=function(Book, data){
                     req.book.save(function (err) {
                         if(err)
                             res.status(500).send();
-                        else{
-                            data.data=req.book;
-                            res.json(data);
-                        }
-
+                        else
+                            res.json(req.book);
                     });
         })
         .patch(function (req, res) {
@@ -67,30 +71,27 @@ var routes=function(Book, data){
                 if(err){
                     res.status(500).send();
                 }else{
-                    data.data=req.book;
-                    res.json(data);
+                    res.json(req.book);
                 }
             });
-            /*if(req.book.title){
+            /!*if(req.book.title){
                 req.book.title=req.body.title;
                 req.book.save();
                 res.json(req.book);
             }else{
                 res.status(404).send("Required book title");
-            }*/
+            }*!/
         })
         .delete(function(req, res) {
             req.book.remove(req.book, function(err, book){
                 if(err)
                     res.status(500).send();
-                else{
-                    data.data=req.book;
-                    res.json(data);
-                }
+                else
+                    res.json(req.book)
             })
-        });
+        })*/;
 
-    return bookRouter;
+    return userRotuer;
 };
 
 module.exports=routes;
